# trt-sr

./: .gitignore  Dockerfile  GEMINI.md  README.md  realesrgan_gen_x4v3_f16.onnx  requirements.txt  run_docker.sh  speed.txt  trt_install.txt
bin_rt/: superres_app  x4v3.plan
configs/: superres-build.ini  superres-run.ini  superres-trans.yaml
cpp/: CMakeLists.txt  build-cpp-docker.sh  build-cpp-local.sh  build-docker.sh  build-local.sh  config.ini
cpp/libsuperres/: CMakeLists.txt
cpp/libsuperres/api/: superres++.hpp  superres.h
cpp/libsuperres/include/: common.h  postprocess.h  preprocess.h  resize.h
cpp/libsuperres/src/: common.cpp  postprocess.cu  preprocess.cu  resize.cu  superres.cpp
cpp/superres/: CLI11.hpp  CMakeLists.txt  main.cpp
cpp/superres/include/: common.h  postprocess.h  preprocess.h  real-esrgan.h  resize.h
cpp/superres/src/: main.cpp  postprocess.cu  preprocess.cu  real-esrgan.cpp  resize.cu
docker/: trt-build.Dockerfile  trt-lean-ubuntu-24.04.Dockerfile  trt-runtime.Dockerfile  trt-ubuntu-24.04.Dockerfile
docs/: install-tensorRT.txt  speed.txt
models/: .gitignore  convert.py  quicksrnetmedium_f16.onnx  quicksrnetsmall_f16.onnx  sesrm5_f16.onnx
models/esrgan.onnx/: model.onnx
models/quicksrnetlarge-float.onnx/: model.data  model.onnx  model_f16.onnx
models/quicksrnetmedium-float.onnx/: model.data  model.onnx
models/quicksrnetsmall-float.onnx/: model.data  model.onnx
models/real-esrgan-x4plus-float.onnx/: model.onnx
models/sesr-m5-float.onnx/: model.data  model.onnx
models/xlsr-float.onnx/: model.data  model.onnx  model_f16.onnx
scripts/: build-cpp-docker.sh  build-trt-plan-docker.sh  debug-superres-docker.sh  docker_utils.py  inspect_onnx.py  run-superres-docker.sh  run_pipeline.py  run_superres.sh  superres-config.yaml  superres-rtonly.py  superres.py  superres_build_docker.py  superres_run_docker.py  superres_trans_docker.py
scripts/cpp-build/: build-cpp-local.sh  config.ini
scripts/run-superres-docker/: config.yaml  main.py
